--- a/Instant-Meetings/Dockerfile
+++ b/Instant-Meetings/Dockerfile
@@ -1,8 +1,13 @@
+# Build stage
 FROM maven:3.8.3-openjdk-17 AS build
-COPY . .
+WORKDIR /app
+COPY pom.xml ./
+COPY src ./src
 RUN mvn clean package -DskipTests
 
-FROM maven:3.8.1-openjdk-17-slim
-COPY --from=build /target/Instant-Meetings-0.0.1-SNAPSHOT.jar Instant-Meetings.jar
+# Run stage
+FROM openjdk:17-jdk-slim
+WORKDIR /app
+COPY --from=build /app/target/Instant-Meetings-0.0.1-SNAPSHOT.jar Instant-Meetings.jar
 EXPOSE 8081
-ENTRYPOINT [ "java","-jar","Instant-Meetings.jar" ] 
+ENTRYPOINT ["java", "-jar", "Instant-Meetings.jar"]
