--- a/Instant-Meetings/Dockerfile
+++ b/Instant-Meetings/Dockerfile
@@ -1,13 +1,8 @@
-# Build stage
 FROM maven:3.8.3-openjdk-17 AS build
-WORKDIR /app
-COPY pom.xml ./
-COPY src ./src
+COPY . .
 RUN mvn clean package -DskipTests
 
-# Run stage
-FROM openjdk:17-jdk-slim
-WORKDIR /app
-COPY --from=build /app/target/Instant-Meetings-0.0.1-SNAPSHOT.jar Instant-Meetings.jar
-EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "Instant-Meetings.jar"]
+FROM openjdk:17-slim
+COPY --from=build /target/Instant-Meetings-0.0.1-SNAPSHOT.jar Instant-Meetings.jar
+EXPOSE 8080
+CMD ["java", "-jar", "Instant-Meetings.jar", "--server.port=${PORT}"]
