--- a/Instant-Meetings/Dockerfile
+++ b/Instant-Meetings/Dockerfile
@@ -1,7 +1,7 @@
 # Build stage
 FROM maven:3.8.3-openjdk-17 AS build
 WORKDIR /app
-COPY . .
+COPY . /app
 RUN mvn clean package -DskipTests
 
 # Production stage
