--- a/Instant-Meetings/Dockerfile
+++ b/Instant-Meetings/Dockerfile
@@ -9,4 +9,4 @@ FROM openjdk:17-slim
 WORKDIR /app
 COPY --from=build /app/target/Instant-Meetings-0.0.1-SNAPSHOT.jar Instant-Meetings.jar
 EXPOSE 8081
-CMD ["java", "-jar", "Instant-Meetings.jar", "--server.port=${PORT}"]
+ENTRYPOINT ["java", "-jar", "Instant-Meetings.jar", "--server.port=${PORT}"]
